Controller Added and Program.cs Updated

--- a/BasarsoftWebAPI/appsettings.json
+++ b/BasarsoftWebAPI/appsettings.json
@@ -1,9 +1,25 @@
+//DEFAULT
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  }
+
+//  }
+
 {
+  "TokenOptions": {
+    "Audience": "x",
+    "Issuer": "x",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "This is my secret authentication key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   }
-
-  }
+}
